# DeepFilterNet-Infer

./: Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: capture.rs
libDF/: Cargo.toml
libDF/src/: lib.rs
