[package]
name = "df-demo"
version = "0.5.7-pre"
edition = "2021"

[[bin]]
# Command line demo without UI or controls
name = "df-demo-c"
path = "src/capture.rs"

[features]
default-model-ll = ["deep_filter/default-model-ll"]

[dependencies]
crossbeam-channel = "0.5"
anyhow = "1.0"
cpal = "0.15"
deep_filter = { path = "../libDF/", default-features = false, features = [
  "tract",
  "use-jemalloc",
  "default-model",
] }
ndarray = "^0.15"
rubato = "0.15"
ringbuf = "0.3"
env_logger = "0.10"
log = { version = "0.4", features = ["std"] }
