[package]
name = "deep_filter"
version = "0.5.7-pre"
authors = ["Hendrik Schröter"]
edition = "2021"
description = "Noise supression using deep filtering"
repository = "https://github.com/Rikorose/DeepFilterNet"
license = "MIT/Apache-2.0"
readme = "../README.md"
rust-version = "1.70"

[lib]
name = "df"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]



[features]
default = ["default-model", "tract"]

transforms = ["dep:thiserror", "dep:ndarray", "dep:rubato"]
logging = ["dep:log", "dep:crossbeam-channel"]
use-jemalloc = ["dep:jemallocator"]
tract = [
  "transforms",
  "logging",
  "dep:tract-core",
  "dep:tract-onnx",
  "dep:tract-pulse",
  "dep:tract-hir",
  "dep:rust-ini",
  "dep:ndarray",
  "dep:anyhow",
  "dep:flate2",
  "dep:tar",
]
default-model = [] # Include default DFN3 model
default-model-ll = [] # Include default DFN3 low latency model
capi = ["tract", "default-model", "dep:ndarray", "logging"]
wasm = [
  "tract",
  "default-model",
  "dep:ndarray",
  "dep:wasm-bindgen",
  "dep:getrandom",
  "dep:console_error_panic_hook",
  "dep:js-sys",
]

[dependencies]
rustfft = "^6.1.0"
realfft = "^3.1.0"
itertools = "0.12"
num-complex = { version = "^0.4", features = ["serde"] }
log = { version = "0.4", features = ["std"], optional = true }
rubato = { version = "0.14", optional = true }
thiserror = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true, features = ["backtrace"] }
ndarray = { version = "^0.15", optional = true, features = ["serde"] }
crossbeam-channel = { version = "^0.5", optional = true }
rust-ini = { version = "^0.21", optional = true }
tract-core = { version = "^0.21.4", optional = true }
tract-onnx = { version = "^0.21.4", optional = true }
tract-pulse = { version = "^0.21.4", optional = true }
tract-hir = { version = "^0.21.4", optional = true }
flate2 = { version = "1.0.24", optional = true }
tar = { version = "0.4.38", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = { version = "0.3", optional = true }


[target.'cfg(all(not(windows), not(target_os = "android"), not(target_os = "macos"), not(target_os = "freebsd"), not(target_env = "musl"), not(target_arch = "riscv64")))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }

[dev-dependencies]
log = { version = "0.4", features = ["std"] }

[package.metadata.capi.header]
name = "deep_filter"
subdirectory = "deep_filter"
[package.metadata.capi.pkg_config]
name = "libdeepfilter"
filename = "deepfilter"
[package.metadata.capi.library]
name = "deepfilter"


